Bug 457784 - Filter layers generate incorrect preview when bounds change.
Summary: Filter layers generate incorrect preview when bounds change.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filter Layers (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-12 02:03 UTC by Ralek Kolemios
Modified: 2022-08-12 14:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Example corruption (567.79 KB, image/png)
2022-08-12 02:03 UTC, Ralek Kolemios
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralek Kolemios 2022-08-12 02:03:25 UTC
Created attachment 151268 [details]
Example corruption

Occurs on both Linux and Windows builds, on master and on 5.0.6.
I have tried reverting 81f9b1aac8 with no luck.

When transforming or cropping filter  layers, the final preview is incorrect. The canvas shows large holes in the filter layer. See attached.
These corruptions are cosmetic, and fix themselves if the affected filter layer is hidden and re-shown.

To reproduce :
1. Create a new document
2. Create a new layer other than background and fill with a darker color
3. Create a filter layer above the dark layer. As far as I have tested, it doesn't matter which.
4. Transform the adjustment layer.

I've found it seems to show up more the longer the transform process takes. Sometimes it doesn't show up unless you undo the transformation.
Comment 1 Dmitry Kazakov 2022-08-12 14:26:00 UTC
Git commit 716923cad309ae93ec41d58b6ab44ec46b434589 by Dmitry Kazakov.
Committed on 12/08/2022 at 14:25.
Pushed by dkazakov into branch 'master'.

Fix update artifacts when trying to transform an adjustment layer

M  +6    -1    libs/image/kis_full_refresh_walker.h

https://invent.kde.org/graphics/krita/commit/716923cad309ae93ec41d58b6ab44ec46b434589
Comment 2 Dmitry Kazakov 2022-08-12 14:26:10 UTC
Git commit 820155446e947977d2f0ac6cf7b394f56d0fdd87 by Dmitry Kazakov.
Committed on 12/08/2022 at 14:26.
Pushed by dkazakov into branch 'krita/5.1'.

Fix update artifacts when trying to transform an adjustment layer

M  +6    -1    libs/image/kis_full_refresh_walker.h

https://invent.kde.org/graphics/krita/commit/820155446e947977d2f0ac6cf7b394f56d0fdd87