Fix update artifacts when trying to transform an adjustment layer

BUG:457784